<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/purple_200"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/waterText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/column1"
        android:textColorHint="@color/grey"
        android:textColor="@color/black"
        android:minHeight="48dp"/>

    <EditText
        android:id="@+id/locationText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/column2"
        android:textColorHint="@color/grey"
        android:textColor="@color/black"
        android:minHeight="48dp"/>

    <EditText
        android:id="@+id/typeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/column3"
        android:textColorHint="@color/grey"
        android:textColor="@color/black"
        android:minHeight="48dp"/>

    <Button
        android:id="@+id/addBtn"
        android:layout_width="108dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/addBtn"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="btnClick"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableLayout
                android:id="@+id/table"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:stretchColumns="*"
                >

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/column1"
                        android:text="@string/column1"
                        android:background="@drawable/cell_border"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:padding="2dp"/>

                    <TextView
                        android:text="@string/column2"
                        android:background="@drawable/cell_border"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:padding="2dp"/>

                    <TextView
                        android:text="@string/column3"
                        android:background="@drawable/cell_border"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:padding="2dp"/>
                </TableRow>
            </TableLayout>
        </HorizontalScrollView>
    </ScrollView>
</LinearLayout>

